--- a/index-en.html
+++ b/index-en.html
@@ -525,6 +525,34 @@
       <div id="references-cards" class="flex snap-x snap-mandatory gap-4 px-4 sm:grid sm:grid-cols-2 lg:grid-cols-3 overflow-x-auto sm:overflow-visible scroll-smooth min-w-0" style="scroll-padding-left: 1rem;">
 
 
+
+
+<div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
+  <div class="flex flex-col h-full">
+    <img alt="Stadtfest Saalfelden" class="w-full h-64 sm:h-80 object-cover" src="img/kaufi1.jpg" />
+    <div class="flex flex-col justify-between h-full">
+      <div class="px-6 py-4">
+        <h3 class="text-lg sm:text-2xl">City Festival – 25 Years of Saalfelden</h3>
+        <p class="text-gray-700 text-sm sm:text-base mt-2">
+          A quarter century of Saalfelden and what a celebration it was! Together with radio host Sebastian Kaufmann, aka <a href="https://www.derkaufi.com" target="_blank" class="text-black hover:underline font-medium">derkaufi</a>, the city festival kicked off in style. 
+          During a special sports awards ceremony, the atmosphere turned emotional, proud, and perfectly in tune. 
+          From the very first beat, DJ Jonny set the tone with spot-on sound and energy. 
+          This night wasn’t just a party – it was a statement: Saalfelden knows how to party!
+        </p>
+      </div>
+      <div class="px-6 py-4 flex flex-wrap gap-2">
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#saalfelden</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#derkaufi</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#sporthonors</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#djjonny</span>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
 <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
   <div class="flex flex-col h-full">
     <img alt="M5 Event" class="w-full h-64 sm:h-80 object-cover" src="img/m5.jpg" />
@@ -540,8 +568,8 @@
       </div>
       <div class="px-6 py-4 flex flex-wrap gap-2">
         <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#M5Magic</span>
-        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#Unforgettable</span>
-        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#Event</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#unforgettable</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#event</span>
         <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#ALLIN</span>
       </div>
     </div>
@@ -584,22 +612,6 @@
           </div>
         </div>
 
-        <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
-          <div class="flex flex-col h-full">
-            <img alt="Foam Party Die Bar" class="w-full h-64 sm:h-80 object-cover" src="img/schaumparty.png" />
-            <div class="flex flex-col justify-between h-full">
-              <div class="px-6 py-4">
-                <h3 class="text-lg sm:text-2xl">Foam Party at "Die Bar", Saalfelden</h3>
-                <p class="text-gray-700 text-sm sm:text-base mt-2">Wet, wild, and definitely not boring – DJ Jonny turns up the heat at the foam party in “Die Bar”. If you've been there, you know: it's not just a night out – it's a full-on experience.</p>
-              </div>
-              <div class="px-6 py-4 flex flex-wrap gap-2">
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#foamparty</span>
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#diebar</span>
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#mallevibes</span>
-              </div>
-            </div>
-          </div>
-        </div>
 
 
         <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
