--- a/index-ru.html
+++ b/index-ru.html
@@ -560,32 +560,32 @@
 
 
 
-<!-- Карта 1 -->
+
 <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
   <div class="flex flex-col h-full">
-    <img alt="M5 Event" class="w-full h-64 sm:h-80 object-cover" src="img/m5.jpg" />
+    <img alt="Городской праздник в Заальфельдене" class="w-full h-64 sm:h-80 object-cover" src="img/kaufi1.jpg" />
     <div class="flex flex-col justify-between h-full">
       <div class="px-6 py-4">
-        <h3 class="text-lg sm:text-2xl">M5 — Эмоции на пределе</h3>
+        <h3 class="text-lg sm:text-2xl">Городской фестиваль — 25 лет городу Заальфельден</h3>
         <p class="text-gray-700 text-sm sm:text-base mt-2">
-          Ритм, публика, энергия — M5 стал настоящим взрывом!  
-          DJ Jonny не просто играл музыку — он передавал чувства и мгновенно чувствовал настроение зала.  
-          Два дня мурашек, настоящих связей и идеальных вайбов. Каждый бит попадал точно в цель —  
-          событие, которое останется в памяти надолго.
+          Четверть века Заальфельдену и какой это был праздник! Вместе с радиоведущим Себастианом Кауфманном, известным как <a href="https://www.derkaufi.com" target="_blank" class="text-black hover:underline font-medium">derkaufi</a>, фестиваль стартовал с яркого открытия. 
+          Во время церемонии награждения спортсменов атмосфера наполнилась эмоциями, гордостью и музыкальной магией. 
+          DJ Jonny с первых секунд задал правильное настроение с чувством, стилем и драйвом. 
+          Это был не просто вечер, а настоящее заявление: Заальфельден умеет веселиться!
         </p>
       </div>
       <div class="px-6 py-4 flex flex-wrap gap-2">
-        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#M5Magic</span>
-        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#Незабываемо</span>
-        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#Событие</span>
-        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#ALLIN</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#заальфельден</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#derkaufi</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#спортивнаячесть</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#djjonny</span>
       </div>
     </div>
   </div>
 </div>
 
 
-        <!-- Karte 2 -->
+    
         <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
           <div class="flex flex-col h-full">
             <img alt="KrallerAlm Leogang" class="w-full h-64 sm:h-80 object-cover" src="img/kralleralm.png" />
@@ -603,7 +603,7 @@
           </div>
         </div>
 
-        <!-- Karte 3 -->
+  
         <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
           <div class="flex flex-col h-full">
             <img alt="Interspar Saalfelden" class="w-full h-64 sm:h-80 object-cover" src="img/interspar.jpeg" />
@@ -618,13 +618,12 @@
                 <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#interspar</span>
                 <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#saalfelden</span>
                 <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#рождественскаявечеринка</span>
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#командныйдух</span>
               </div>
             </div>
           </div>
         </div>
 
-        <!-- Karte 4 -->
+        
         <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
           <div class="flex flex-col h-full">
             <img alt="Schaumparty Die Bar" class="w-full h-64 sm:h-80 object-cover" src="img/schaumparty.png" />
@@ -643,7 +642,7 @@
         </div>
 
 
-        <!-- Karte 5 -->
+   
         <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
           <div class="flex flex-col h-full">
             <img alt="Feuerwehrfest Saalfelden" class="w-full h-64 sm:h-80 object-cover" src="img/feuerwehr-draufg.jpeg" />
@@ -665,26 +664,8 @@
           </div>
         </div>
 
-        <!-- Karte 6 -->
-        <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
-          <div class="flex flex-col h-full">
-            <img alt="4Flow Festival Sölden" class="w-full h-64 sm:h-80 object-cover" src="img/4flow.jpeg" />
-            <div class="flex flex-col justify-between h-full">
-              <div class="px-6 py-4">
-                <h3 class="text-lg sm:text-2xl">4Flow Festival в Зёльдене</h3>
-                <p class="text-gray-700 text-sm sm:text-base mt-2">Снег, биты и адреналин: на фестивале 4Flow DJ Jonny заставляет таять не только снег, но и заводит публику до безумия. Высоко в горах Зёльдена, но с басом глубоко в сердце!</p>
-              </div>
-              <div class="px-6 py-4 flex flex-wrap gap-2">
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#4flowfestival</span>
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#зёльден</span>
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#апрески</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+       </div>
     </div>
-
     <div class="text-center mt-10">
       <a class="bg-purple-600 hover:bg-purple-800 text-white font-bold py-2 px-8 rounded-full inline-flex items-center" href="references-ru.html">
         Смотреть больше <i class="mdi mdi-arrow-right ml-2 -mr-1 text-xl"></i>
