--- a/index-zh.html
+++ b/index-zh.html
@@ -549,7 +549,34 @@
         class="flex snap-x snap-mandatory gap-4 px-4 sm:grid sm:grid-cols-2 lg:grid-cols-3 overflow-x-auto sm:overflow-visible scroll-smooth min-w-0"
         style="scroll-padding-left: 1rem;">
 
-<!-- Karte 1 -->
+
+
+<!-- 卡片 1 -->
+<div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
+  <div class="flex flex-col h-full">
+    <img alt="萨尔费尔登市庆" class="w-full h-64 sm:h-80 object-cover" src="img/kaufi1.jpg" />
+    <div class="flex flex-col justify-between h-full">
+      <div class="px-6 py-4">
+        <h3 class="text-lg sm:text-2xl">萨尔费尔登市庆——25周年盛典</h3>
+        <p class="text-gray-700 text-sm sm:text-base mt-2">
+          萨尔费尔登建市25周年，这场庆典可谓盛况空前！在著名广播主持人 <a href="https://www.derkaufi.com" target="_blank" class="text-black hover:underline font-medium">derkaufi</a> 的陪同下，市庆隆重开幕。  
+          体育表彰环节更是让现场充满了感动、自豪与氛围感十足的音乐。  
+          DJ Jonny从第一首歌起就点燃全场，精准拿捏节奏与情绪。  
+          这不仅是一场派对，更是一种态度：萨尔费尔登，真的会玩！
+        </p>
+      </div>
+      <div class="px-6 py-4 flex flex-wrap gap-2">
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#萨尔费尔登</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#derkaufi</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#体育表彰</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#djjonny</span>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
   <div class="flex flex-col h-full">
     <img alt="M5 活动" class="w-full h-64 sm:h-80 object-cover" src="img/m5.jpg" />
@@ -573,7 +600,7 @@
 </div>
 
 
-<!-- Karte 2 -->
+
         <div class="flex-shrink-0 w-full max-w-[90vw]
  sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
           <div class="flex flex-col h-full">
@@ -592,7 +619,6 @@
           </div>
         </div>
 
-<!-- Karte 3 -->
 <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
   <div class="flex flex-col h-full">
     <img alt="Interspar Saalfelden" class="w-full h-64 sm:h-80 object-cover" src="img/interspar.jpeg" />
@@ -614,7 +640,7 @@
 </div>
 
 
-        <!-- Karte 4 -->
+    
         <div class="flex-shrink-0 w-full max-w-[90vw]
  sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
           <div class="flex flex-col h-full">
@@ -634,7 +660,7 @@
         </div>
 
 
-<!-- Karte 5 -->
+
 <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
   <div class="flex flex-col h-full">
     <img alt="Feuerwehrfest Saalfelden" class="w-full h-64 sm:h-80 object-cover" src="img/feuerwehr-draufg.jpeg" />
@@ -655,24 +681,7 @@
 </div>
 
 
-        <!-- Karte 6 -->
-        <div class="flex-shrink-0 w-full max-w-[90vw]
- sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
-          <div class="flex flex-col h-full">
-            <img alt="4Flow Festival Sölden" class="w-full h-64 sm:h-80 object-cover" src="img/4flow.jpeg" />
-            <div class="flex flex-col justify-between h-full">
-              <div class="px-6 py-4">
-                <h3 class="text-lg sm:text-2xl">4Flow 音乐节 – Sölden</h3>
-                <p class="text-gray-700 text-sm sm:text-base mt-2">雪地、节拍与肾上腺素：在 4Flow 音乐节，DJ Jonny 不仅让雪场融化，也让观众跟着疯狂；身处高高的 Sölden，低音直击心底。</p>
               </div>
-           <div class="px-6 py-4 flex flex-wrap gap-2">
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#4flowfestival</span>
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#sölden</span>
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#apresski</span>
-              </div>
-            </div>
-</div>
-      </div>
     </div>
 
     <div class="text-center mt-10">
