--- a/index.html
+++ b/index.html
@@ -552,9 +552,29 @@
         class="flex snap-x snap-mandatory gap-4 px-4 sm:grid sm:grid-cols-2 lg:grid-cols-3 overflow-x-auto sm:overflow-visible scroll-smooth min-w-0"
         style="scroll-padding-left: 1rem;">
 
-
 <!-- Karte 1 -->
+<div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
+  <div class="flex flex-col h-full">
+    <img alt="Stadtfest Saalfelden" class="w-full h-64 sm:h-80 object-cover" src="img/kaufi1.jpg" />
+    <div class="flex flex-col justify-between h-full">
+      <div class="px-6 py-4">
+        <h3 class="text-lg sm:text-2xl">Das Stadtfest – 25 Jahre Stadt Saalfelden</h3>
+        <p class="text-gray-700 text-sm sm:text-base mt-2">
+          Ein Vierteljahrhundert Stadt Saalfelden und was für ein Fest! Gemeinsam mit Radiomoderator Sebastian Kaufmann alias <a href="https://www.derkaufi.com" target="_blank" class="text-black hover:underline font-medium">derkaufi</a> wurde das Stadtfest Saalfelden feierlich eröffnet. Im Rahmen der Sportlerehrung entstand ein Moment voller Emotionen, Stolz und musikalischem Feingefühl. Von der ersten Sekunde an sorgte DJ Jonny für den richtigen Ton. Dieser Abend war nicht nur ein Fest, sondern ein Statement: Saalfelden kann feiern!
+        </p>
+      </div>
+      <div class="px-6 py-4 flex flex-wrap gap-2">
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#saalfelden</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#derkaufi</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#sportlerehrung</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#dj-jonny</span>
+      </div>
+    </div>
+  </div>
+</div>
 
+
+<!-- Karte 2 -->
 <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
   <div class="flex flex-col h-full">
     <img alt="M5 Event" class="w-full h-64 sm:h-80 object-cover" src="img/m5.jpg" />
@@ -579,7 +599,7 @@
 </div>
 
 
-<!-- Karte 2 -->
+<!-- Karte 3 -->
         <div class="flex-shrink-0 w-full max-w-[90vw]
  sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
           <div class="flex flex-col h-full">
@@ -598,7 +618,7 @@
           </div>
         </div>
 
-<!-- Karte 3 -->
+<!-- Karte 4 -->
 <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
   <div class="flex flex-col h-full">
     <img alt="Interspar Saalfelden" class="w-full h-64 sm:h-80 object-cover" src="img/interspar.jpeg" />
@@ -621,7 +641,7 @@
 </div>
 
 
-        <!-- Karte 4 -->
+<!-- Karte 5 -->
         <div class="flex-shrink-0 w-full max-w-[90vw]
  sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
           <div class="flex flex-col h-full">
@@ -640,7 +660,7 @@
           </div>
         </div>
 
-<!-- Karte 5 -->
+<!-- Karte 6 -->
 <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
   <div class="flex flex-col h-full">
     <img alt="Feuerwehrfest Saalfelden" class="w-full h-64 sm:h-80 object-cover" src="img/feuerwehr-draufg.jpeg" />
@@ -662,27 +682,7 @@
   </div>
 </div>
 
-
-        <!-- Karte 6 -->
-        <div class="flex-shrink-0 w-full max-w-[90vw]
- sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
-          <div class="flex flex-col h-full">
-            <img alt="4Flow Festival Sölden" class="w-full h-64 sm:h-80 object-cover" src="img/4flow.jpeg" />
-            <div class="flex flex-col justify-between h-full">
-              <div class="px-6 py-4">
-                <h3 class="text-lg sm:text-2xl">4Flow Festival in Sölden</h3>
-                <p class="text-gray-700 text-sm sm:text-base mt-2">Schnee, Beats und Adrenalin: Beim 4Flow Festival bringt DJ Jonny nicht nur den Schnee zum Schmelzen, sondern auch das Publikum zum Ausflippen. Hoch oben in Sölden, aber mit Bass tief im Herz!</p>
-              </div>
-           <div class="px-6 py-4 flex flex-wrap gap-2">
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#4flowfestival</span>
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#sölden</span>
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#apresski</span>
-              </div>
-            </div>
-</div>
-      </div>
     </div>
-
     <div class="text-center mt-10">
       <a class="bg-purple-600 hover:bg-purple-800 text-white font-bold py-2 px-8 rounded-full inline-flex items-center" href="references.html">
         Mehr ansehen <i class="mdi mdi-arrow-right ml-2 -mr-1 text-xl"></i>
