--- a/references-en.html
+++ b/references-en.html
@@ -118,6 +118,47 @@
     <div class="column_1">
 
 
+<!-- Wedding of Dr. Rudelstorfer – Hotel Schwarzacher -->
+<div class="max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4" data-aos="fade-right">
+  <img class="w-full h-64 object-cover" src="img/rudelstorfer.jpg" alt="Wedding Dr. Rudelstorfer Hinterglemm" />
+  <div class="px-6 py-4">
+    <h3 class="text-2xl">Hotel Schwarzacher – Gregor & Melanie's Wedding</h3>
+    <p class="text-gray-700 text-base">
+      In the elegant setting of Hotel Schwarzacher in Hinterglemm, <a href="https://lunge-pinzgau.at" target="_blank" class="text-black hover:underline font-medium">Dr. Gregor Rudelstorfer</a> and his stunning bride Melanie said “I do.”  
+      Between goosebump moments on the dancefloor and pure party vibes, one thing was certain: this night was all heart. Beautiful, emotional, and unforgettable – from the first song to the final beat.
+    </p>
+  </div>
+  <div class="px-6 py-4">
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#wedding</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#drrudelstorfer</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#hinterglemm</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#hotelschwarzacher</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#djjonny</span>
+  </div>
+</div>
+
+
+
+<!-- City Festival Saalfelden – 25 Years -->
+<div class="max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4" data-aos="fade-right">
+  <img class="w-full h-64 object-cover" src="img/kaufi1.jpg" alt="City Festival Saalfelden" />
+  <div class="px-6 py-4">
+    <h3 class="text-2xl">25 Years of Saalfelden – City Festival</h3>
+    <p class="text-gray-700 text-base">
+      Saalfelden turned 25 – and threw a party to remember!  
+      Kicking things off with radio personality <a href="https://www.derkaufi.com" target="_blank" class="text-black hover:underline font-medium">derkaufi</a>, DJ Jonny helped open the festival during the town’s official sports awards ceremony.  
+      A night full of pride, emotion, and perfectly tuned vibes. From the very first beat, it was clear: this was going to be unforgettable.
+    </p>
+  </div>
+  <div class="px-6 py-4">
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#saalfelden</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#derkaufi</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#sporthonors</span>
+  </div>
+</div>
+
+
+
 <!-- M5 – Emotions in Overdrive -->
 <div class="max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4" data-aos="fade-right">
   <img class="w-full h-64 object-cover" src="img/m5.jpg" alt="M5 Event" />
@@ -132,8 +173,8 @@
   </div>
   <div class="px-6 py-4">
     <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#M5Magic</span>
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#Unforgettable</span>
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#Event</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#unforgettable</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#event</span>
     <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#ALLIN</span>
   </div>
 </div>
