--- a/references-ru.html
+++ b/references-ru.html
@@ -129,6 +129,50 @@
   <div class="container max-w-5xl mx-auto m-8" data-aos="fade-left">
     <div class="column_1">
 
+
+<!-- Свадьба доктора Рудельсторфера – отель Schwarzacher -->
+<div class="max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4" data-aos="fade-right">
+  <img class="w-full h-64 object-cover" src="img/rudelstorfer.jpg" alt="Свадьба доктора Рудельсторфера в Хинтерглемме" />
+  <div class="px-6 py-4">
+    <h3 class="text-2xl">Отель Schwarzacher – свадьба Грегора и Мелани</h3>
+    <p class="text-gray-700 text-base">
+      В стильной атмосфере отеля Schwarzacher в Хинтерглемме <a href="https://lunge-pinzgau.at" target="_blank" class="text-black hover:underline font-medium">доктор Грегор Рудельсторфер</a> и его прекрасная Мелани сказали друг другу «да».  
+      От трогательных моментов на танцполе до яркой вечеринки — этот день был настоящим праздником любви.  
+      Невероятно красивый вечер — от первого трека до последнего бита.
+    </p>
+  </div>
+  <div class="px-6 py-4">
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#свадьба</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#докторрудельсторфер</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#хинтерглемм</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#schwarzacher</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#djjonny</span>
+  </div>
+</div>
+
+
+
+
+<!-- Городской фестиваль Заальфельден – 25 лет -->
+<div class="max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4" data-aos="fade-right">
+  <img class="w-full h-64 object-cover" src="img/kaufi1.jpg" alt="Городской фестиваль Заальфельден" />
+  <div class="px-6 py-4">
+    <h3 class="text-2xl">25 лет городу Заальфельден – городской фестиваль</h3>
+    <p class="text-gray-700 text-base">
+      Заальфельден отметил своё 25-летие с настоящим размахом!  
+      Вместе с радиоведущим <a href="https://www.derkaufi.com" target="_blank" class="text-black hover:underline font-medium">derkaufi</a> DJ Jonny торжественно открыл фестиваль в рамках церемонии награждения спортсменов.  
+      Вечер был наполнен эмоциями, гордостью и идеально подобранной музыкой. С первых аккордов стало ясно: это событие останется в памяти надолго.
+    </p>
+  </div>
+  <div class="px-6 py-4">
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#заальфельден</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#derkaufi</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#награждениеспортсменов</span>
+  </div>
+</div>
+
+
+
 <!-- M5 -->
 <div class="max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4" data-aos="fade-right">
   <img class="w-full h-64 object-cover" src="img/m5.jpg" alt="M5 Event" />
