--- a/references-zh.html
+++ b/references-zh.html
@@ -117,6 +117,47 @@
   <div class="container max-w-5xl mx-auto m-8" data-aos="fade-left">
     <div class="column_1">
 
+<!-- Rudelstorfer 博士婚礼 – Schwarzacher 酒店 -->
+<div class="max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4" data-aos="fade-right">
+  <img class="w-full h-64 object-cover" src="img/rudelstorfer.jpg" alt="Rudelstorfer 博士婚礼 Hinterglemm" />
+  <div class="px-6 py-4">
+    <h3 class="text-2xl">Schwarzacher 酒店 – Gregor 与 Melanie 的婚礼</h3>
+    <p class="text-gray-700 text-base">
+      在 Hinterglemm 的高雅 Schwarzacher 酒店里，<a href="https://lunge-pinzgau.at" target="_blank" class="text-black hover:underline font-medium">Rudelstorfer 博士</a> 与他美丽的新娘 Melanie 举办了一场梦幻婚礼。  
+      从感动满满的舞池时刻，到尽情狂欢的深夜派对——这是一场属于爱与音乐的夜晚。每一首歌都充满回忆，从第一拍到最后一刻，令人难忘。
+    </p>
+  </div>
+  <div class="px-6 py-4">
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#婚礼</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#rudelstorfer博士</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#hinterglemm</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#schwarzacher酒店</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#djjonny</span>
+  </div>
+</div>
+
+
+
+
+<!-- 萨尔费尔登市庆 – 25周年 -->
+<div class="max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4" data-aos="fade-right">
+  <img class="w-full h-64 object-cover" src="img/kaufi1.jpg" alt="萨尔费尔登市庆" />
+  <div class="px-6 py-4">
+    <h3 class="text-2xl">萨尔费尔登市庆 – 25周年纪念</h3>
+    <p class="text-gray-700 text-base">
+      萨尔费尔登建市25周年，这场庆典盛况空前！  
+      DJ Jonny 携手知名广播主持人 <a href="https://www.derkaufi.com/" target="_blank" class="text-black hover:underline font-medium">derkaufi</a> 共同为市庆拉开序幕，活动在体育表彰仪式中正式启动。  
+      整个夜晚洋溢着自豪、情感与完美音乐氛围。从第一首歌开始，大家就知道——这会是一个难忘的夜晚！
+    </p>
+  </div>
+  <div class="px-6 py-4">
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#萨尔费尔登</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#derkaufi</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#体育表彰</span>
+  </div>
+</div>
+
+
 <!-- M5——情绪炸裂之夜 -->
 <div class="max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4" data-aos="fade-right">
   <img class="w-full h-64 object-cover" src="img/m5.jpg" alt="M5 活动" />
