--- a/references.html
+++ b/references.html
@@ -129,6 +129,42 @@
   <div class="container max-w-5xl mx-auto m-8" data-aos="fade-left">
     <div class="column_1">
 
+<!-- Hochzeit Dr. Rudelstorfer – Hotel Schwarzacher -->
+<div class="max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4" data-aos="fade-right">
+  <img class="w-full h-64 object-cover" src="img/rudelstorfer.jpg" alt="Hochzeit Dr. Rudelstorfer Hinterglemm" />
+  <div class="px-6 py-4">
+    <h3 class="text-2xl">Hotel Schwarzacher - Hochzeit von Gregor & Melanie</h3>
+    <p class="text-gray-700 text-base">
+      Im stilvollen Ambiente des Hotel Schwarzacher in Hinterglemm gaben sich <a href="https://lunge-pinzgau.at" target="_blank" class="text-black hover:underline font-medium">Dr. Gregor Rudelstorfer</a> und seine schöne Melanie das Jawort. Zwischen Gänsehautmomenten auf der Tanzfläche und ausgelassener Feierlaune war eines klar: Diese Nacht gehört dem Herzen. Unvergesslich schön, von der ersten Nummer bis zum letzten Beat.
+    </p>
+  </div>
+  <div class="px-6 py-4">
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#hochzeit</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#drrudelstorfer</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#hinterglemm</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#hotelschwarzacher</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#djjonny</span>
+  </div>
+</div>
+
+
+<!-- Stadtfest Saalfelden – 25 Jahre -->
+<div class="max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4" data-aos="fade-right">
+  <img class="w-full h-64 object-cover" src="img/kaufi1.jpg" alt="Stadtfest Saalfelden" />
+  <div class="px-6 py-4">
+    <h3 class="text-2xl">Stadtfest Saalfelden – 25 Jahre</h3>
+    <p class="text-gray-700 text-base">
+      Zum 25-jährigen Jubiläum der Stadt Saalfelden wurde groß gefeiert. Gemeinsam mit Radiomoderator <a href="https://www.derkaufi.com" target="_blank" class="text-black hover:underline font-medium">derkaufi</a> eröffnete er das Stadtfest im Rahmen der Sportlerehrung. 
+      Ein Abend voller Emotionen, Stolz und perfekter musikalischer Untermalung. Vom ersten Beat an war klar: Dieser Abend wird unvergesslich.
+    </p>
+  </div>
+  <div class="px-6 py-4">
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#saalfelden</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#derkaufi</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#sportlerehrung</span>
+  </div>
+</div>
+
 
 <!-- M5 – Emotionen auf Anschlag -->
 <div class="max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4" data-aos="fade-right">
@@ -144,8 +180,8 @@
   </div>
   <div class="px-6 py-4">
     <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#M5Magic</span>
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5  text-sm text-gray-700">#Unvergesslich</span>
-    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5  text-sm text-gray-700">#Event</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5  text-sm text-gray-700">#unvergesslich</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5  text-sm text-gray-700">#event</span>
     <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#ALLIN</span>
   </div>
 </div>
