--- a/references-ru.html
+++ b/references-ru.html
@@ -136,7 +136,7 @@
   <div class="px-6 py-4">
     <h3 class="text-2xl">Отель Schwarzacher – свадьба Грегора и Мелани</h3>
     <p class="text-gray-700 text-base">
-      В стильной атмосфере отеля Schwarzacher в Хинтерглемме <a href="https://lunge-pinzgau.at" target="_blank" class="text-black hover:underline font-medium">доктор Грегор Рудельсторфер</a> и его прекрасная Мелани сказали друг другу «да».  
+      В стильной атмосфере отеля Schwarzacher в Хинтерглемме <a href="https://lunge-pinzgau.at" target="_blank" class="text-black hover:underline font-medium">Грегор Рудельсторфер</a> и его прекрасная Мелани сказали друг другу «да».  
       От трогательных моментов на танцполе до яркой вечеринки — этот день был настоящим праздником любви.  
       Невероятно красивый вечер — от первого трека до последнего бита.
     </p>
