--- a/references-zh.html
+++ b/references-zh.html
@@ -123,7 +123,7 @@
   <div class="px-6 py-4">
     <h3 class="text-2xl">Schwarzacher 酒店 – Gregor 与 Melanie 的婚礼</h3>
     <p class="text-gray-700 text-base">
-      在 Hinterglemm 的高雅 Schwarzacher 酒店里，<a href="https://lunge-pinzgau.at" target="_blank" class="text-black hover:underline font-medium">Rudelstorfer 博士</a> 与他美丽的新娘 Melanie 举办了一场梦幻婚礼。  
+      在 Hinterglemm 的高雅 Schwarzacher 酒店里，<a href="https://lunge-pinzgau.at" target="_blank" class="text-black hover:underline font-medium">Rudelstorfer</a> 与他美丽的新娘 Melanie 举办了一场梦幻婚礼。  
       从感动满满的舞池时刻，到尽情狂欢的深夜派对——这是一场属于爱与音乐的夜晚。每一首歌都充满回忆，从第一拍到最后一刻，令人难忘。
     </p>
   </div>
