--- a/references.html
+++ b/references.html
@@ -135,7 +135,7 @@
   <div class="px-6 py-4">
     <h3 class="text-2xl">Hotel Schwarzacher - Hochzeit von Gregor & Melanie</h3>
     <p class="text-gray-700 text-base">
-      Im stilvollen Ambiente des Hotel Schwarzacher in Hinterglemm gaben sich <a href="https://lunge-pinzgau.at" target="_blank" class="text-black hover:underline font-medium">Dr. Gregor Rudelstorfer</a> und seine schöne Melanie das Jawort. Zwischen Gänsehautmomenten auf der Tanzfläche und ausgelassener Feierlaune war eines klar: Diese Nacht gehört dem Herzen. Unvergesslich schön, von der ersten Nummer bis zum letzten Beat.
+      Im stilvollen Ambiente des Hotel Schwarzacher in Hinterglemm gaben sich <a href="https://lunge-pinzgau.at" target="_blank" class="text-black hover:underline font-medium">Gregor Rudelstorfer</a> und seine schöne Melanie das Jawort. Zwischen Gänsehautmomenten auf der Tanzfläche und ausgelassener Feierlaune war eines klar: Diese Nacht gehört dem Herzen. Unvergesslich schön, von der ersten Nummer bis zum letzten Beat.
     </p>
   </div>
   <div class="px-6 py-4">
