--- a/references-en.html
+++ b/references-en.html
@@ -124,7 +124,7 @@
   <div class="px-6 py-4">
     <h3 class="text-2xl">Hotel Schwarzacher – Gregor & Melanie's Wedding</h3>
     <p class="text-gray-700 text-base">
-      In the elegant setting of Hotel Schwarzacher in Hinterglemm, <a href="https://lunge-pinzgau.at" target="_blank" class="text-black hover:underline font-medium">Dr. Gregor Rudelstorfer</a> and his stunning bride Melanie said “I do.”  
+      In the elegant setting of Hotel Schwarzacher in Hinterglemm, <a href="https://lunge-pinzgau.at" target="_blank" class="text-black hover:underline font-medium">Gregor Rudelstorfer</a> and his stunning bride Melanie said “I do.”  
       Between goosebump moments on the dancefloor and pure party vibes, one thing was certain: this night was all heart. Beautiful, emotional, and unforgettable – from the first song to the final beat.
     </p>
   </div>
